[project]
name = "grapho-poll"
version = "0.1.0"
description = "Audience polling tool backed by graph database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "monsterui>=1.0.45",
    "neo4j>=6.2.0",
    "opentelemetry-distro>=0.64b0",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-instrumentation-httpx>=0.64b0",
    "opentelemetry-instrumentation-starlette>=0.64b0",
    "python-dotenv>=1.2.2",
    "python-fasthtml==0.13.3",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
load = [
    "locust>=2.32",
    "websocket-client>=1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
